@@ -1,4 +1,4 @@
-package com.loyalty.model;
+package com.docai.model;
 
 import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
@@ -6,10 +6,11 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Data
 @Builder
@@ -30,16 +31,20 @@ public class User implements UserDetails {
     
     @Column(unique = true, nullable = false)
     private String email;
-    
+
     @Column(nullable = false)
-    private Long points;
+    @Enumerated(EnumType.STRING)
+    private Role role;
     
     @Column(nullable = false)
     private boolean enabled;
 
+    @OneToMany(mappedBy = "user", cascade = CascadeType.ALL)
+    private List<Document> documents;
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
@@ -55,5 +60,10 @@ public class User implements UserDetails {
     @Override
     public boolean isCredentialsNonExpired() {
         return true;
+    }
+
+    public enum Role {
+        USER,
+        ADMIN
     }
 }
